--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,10 @@
 
     <AutoCompleteTextView
         android:id="@+id/autoCompleteTextView"
-        android:layout_width="78dp"
-        android:layout_height="44dp"
-        android:hint="@string/searchHint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="search"
+        android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -31,15 +32,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.257" />
 
+
     <TextView
-        android:id="@+id/message_Text"
-        android:layout_width="131dp"
-        android:layout_height="51dp"
-        android:text="@string/messageText"
+        android:id="@+id/data_View"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Weather Info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.552" />
+        app:layout_constraintTop_toBottomOf="@+id/search_button"
+        app:layout_constraintVertical_bias="0.324" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
